# litellm-control-plane

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: access-control-matrix.md  ai-dev-rules.md  api-contract.md  architecture.md  data-model.md  definition-of-done.md  deployment-guide.md  doc_strategy.md  faq.md  policy-model.md  provider-baseline.md  rollout-model.md  secrets-policy.md  setup-guide.md  supply-chain.md  testing-strategy.md  threat-model.md
docs/adr/: 0001-control-plane-vs-data-plane.md  0002-litellm-integration-boundary.md  0003-doppler-secrets-structure.md  0004-node-based-config-subsets.md  0005-no-plugin-runtime-in-mvp.md  0006-single-controller-before-ha.md
docs/modules/: account-state-machine.md  config-generator.md  doppler-integration.md  event-ingestion.md  health-manager.md  litellm-adapter.md  policy-engine.md  probe-engine.md  rollout-orchestrator.md
docs/runbooks/: doppler-token-expired.md  incident-429-cooldown.md  litellm-config-apply-failure.md  node-bootstrap.md  provider-key-rotation.md  rollback.md  tailscale-exit-node-failure.md
examples/: inventory.yaml
examples/doppler/: .gitkeep
examples/inventory/: .gitkeep
ideas/: simplify-registration-2026-07-23.md
src/adapters/: litellm_adapter.py
src/api/: main.py  routes.py
src/audit/: logger.py
src/config/: bootstrap.py  db.py  generator.py  schema.sql
src/events/: ingestion.py
src/health/: __init__.py  manager.py  probe.py  state_machine.py
tests/: conftest.py
(+30 files in other folders)
