[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litellm-control-plane"
version = "0.1.0"
description = "Control plane for LiteLLM proxy management, registry, routing policies, and health checks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/litellm_control_plane"]
