[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litellm-control-plane"
version = "0.1.0"
description = "Control plane for LiteLLM proxy management, registry, routing policies, and health checks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/litellm_control_plane"]
